--- a/about.html
+++ b/about.html
@@ -271,8 +271,8 @@
             </a>
             <nav class="nav-links">
                 <a href="index.html" data-i18n="nav.home">首页</a>
-                <a href="x7_ai.html" data-i18n="nav.x7_ai">X7-AI机器人</a>
-                <a href="synapse_os.html" data-i18n="nav.synapse">Synapse OS</a>
+                <a href="x7_ai.html" data-i18n="nav.x7_ai">Panshaker X7</a>
+                <a href="synapse_os.html" data-i18n="nav.synapse">PanOS</a>
                 <a href="about.html" class="active" data-i18n="nav.about">关于我们</a>
                 <a href="#" data-i18n="nav.contact">联系我们</a>
             </nav>
@@ -296,7 +296,7 @@
                     我们是成功将“无人化烹饪”在北美中餐赛道落地的先驱。我们看到了北美市场传统餐饮中的痛点，将不可控的烹饪环节转化为标准化的流程，彻底解决了行业长期以来“高人工、低效率、品质不稳定，商业复杂”的痛点。
                 </p>
                 <p data-i18n="about.intro.p3">
-                    我们不仅自主经营品牌，更通过创新的“店中店”合作模式与机器订阅体系，为现有餐厅提供技术赋能。我们的核心竞争力源于自主研发炒菜机器人、人工智能视觉监控技术以及 Synapse OS
+                    我们不仅自主经营品牌，更通过创新的“店中店”合作模式与机器订阅体系，为现有餐厅提供技术赋能。我们的核心竞争力源于自主研发炒菜机器人、人工智能视觉监控技术以及 PanOS
                     自动化餐厅管理系统，是替代预制菜的最优解决方案。</p>
                 <p data-i18n="about.intro.p4">
                     未来，伴勺科技将持续深耕餐饮自动化浪潮，致力于将产品线从自动化炒菜机器人扩展至全品类中餐标准化基础设施，降低餐饮行业创业的门槛。我们坚持运用前沿科技连接物理世界与数字世界，为全球餐饮从业者创造价值，为每一位食客带来更有温度和实惠的美食体验。
@@ -342,6 +342,18 @@
         </div>
     </section>
 
+    <!-- 品牌关系 -->
+    <section class="section" style="background: #fafafa; padding: 40px 0;">
+        <div class="container" style="text-align: center;">
+            <p style="font-size: 14px; color: #999; margin-bottom: 24px;"
+               data-i18n="about.brand.desc">Panshaker Services 是芯厨师的海外品牌</p>
+            <div style="display: flex; align-items: center; justify-content: center; gap: 40px; flex-wrap: wrap;">
+                <img src="assets/logo/panshaker-logo.svg" alt="Panshaker Services" style="height: 24px; width: auto;">
+                <img src="assets/logo/xinchushi-logo.svg" alt="芯厨师 xinchushi" style="height: 32px; width: auto;">
+            </div>
+        </div>
+    </section>
+
     <footer>
         <div class="container">
             <div class="footer-content">
@@ -356,7 +368,7 @@
                 <div class="footer-col">
                     <h4 data-i18n="footer.tech">技术支持</h4>
                     <ul>
-                        <li><a href="#" data-i18n="footer.synapse">Synapse OS</a></li>
+                        <li><a href="#" data-i18n="footer.synapse">PanOS</a></li>
                         <li><a href="#" data-i18n="footer.hardware">硬件改造方案</a></li>
                         <li><a href="#" data-i18n="footer.support">售后服务</a></li>
                     </ul>
