--- a/index.html
+++ b/index.html
@@ -577,8 +577,8 @@
             </a>
             <nav class="nav-links">
                 <a href="#" data-i18n="nav.home">首页</a>
-                <a href="x7_ai.html" data-i18n="nav.x7_ai">X7-AI机器人</a>
-                <a href="synapse_os.html" data-i18n="nav.synapse">Synapse OS</a>
+                <a href="x7_ai.html" data-i18n="nav.x7_ai">Panshaker X7</a>
+                <a href="synapse_os.html" data-i18n="nav.synapse">PanOS</a>
                 <a href="about.html" data-i18n="nav.about">关于我们</a>
                 <a href="#" data-i18n="nav.contact">联系我们</a>
             </nav>
@@ -751,7 +751,7 @@
         <div class="container-wide">
             <div class="split-section">
                 <div class="split-text">
-                    <h3 data-i18n="home.solution.price_title">X7-AI炒菜机器人</h3>
+                    <h3 data-i18n="home.solution.price_title">Panshaker X7</h3>
                     <p data-i18n-html="home.solution.price_desc"
                         style="font-size: 22px; color: #333; font-weight: 500; line-height: 1.6;">竞品价格
                         1/2<br>&lt; 2周 低成本改装<br>实现无人化烹饪</p>
@@ -773,10 +773,10 @@
                             data-i18n="home.solution.synapse_title"
                             onmouseenter="this.style.color='#0E427E'; this.style.transform='translateX(10px)'"
                             onmouseleave="this.style.color='inherit'; this.style.transform='translateX(0)'">
-                            Synapse OS
+                            PanOS
                         </h3>
                     </a>
-                    <p data-i18n-html="home.solution.synapse_desc" style="font-size: 22px; line-height: 1.7;">
+                    <p data-i18n-html="home.solution.synapse_desc" style="font-size: 22px; color: #333; font-weight: 500; line-height: 1.6;">
                         下一代餐饮操作系统<br>打造中餐出海标准化一条龙服务</p>
                     <a href="synapse_os.html" data-i18n="home.solution.learn_more"
                         style="display: inline-block; margin-top: 25px; padding: 12px 28px; background: #0E427E; color: #fff; border-radius: 25px; font-size: 15px; transition: all 0.3s; box-shadow: 0 4px 12px rgba(14, 66, 126, 0.2);"
@@ -868,7 +868,7 @@
                 <div class="footer-col">
                     <h4 data-i18n="footer.tech">技术支持</h4>
                     <ul>
-                        <li><a href="synapse_os.html" data-i18n="footer.synapse">Synapse OS</a></li>
+                        <li><a href="synapse_os.html" data-i18n="footer.synapse">PanOS</a></li>
                         <li><a href="#" data-i18n="footer.hardware">硬件改造方案</a></li>
                         <li><a href="#" data-i18n="footer.support">售后服务</a></li>
                     </ul>
