--- a/synapse_os.html
+++ b/synapse_os.html
@@ -239,7 +239,6 @@
         .hero-logo-img {
             width: 240px;
             margin: 0 auto 40px;
-            filter: brightness(0) invert(1);
         }
 
         /* Increased size for desktop */
@@ -1306,9 +1305,8 @@
                 <picture>
                     <source srcset="assets/logo/panshaker-logo.svg" type="image/svg+xml">
                     <img src="assets/logo/panshaker-logo.png"
-                         srcset="assets/logo/panshaker-logo.png 1x, assets/logo/panshaker-logo@2x.png 2x"
-                         alt="Panshaker Services"
-                         class="logo-img">
+                        srcset="assets/logo/panshaker-logo.png 1x, assets/logo/panshaker-logo@2x.png 2x"
+                        alt="Panshaker Services" class="logo-img">
                 </picture>
             </a>
             <nav class="nav-links">
@@ -1325,8 +1323,8 @@
     <!-- Hero Section -->
     <section class="hero-os">
         <div class="hero-content-wrapper" style="max-width: 980px; margin: 0 auto;">
-            <img src="assets/logo/panos-logo-transparent.svg" alt="PanOS" class="hero-logo-img"
-                style="width: 400px !important; margin-bottom: 50px !important;">
+            <img src="assets/logo/panos-logo.png" alt="PanOS" class="hero-logo-img"
+                style="width: 170px !important; margin-bottom: 30px !important;">
             <h1 data-i18n="synapse.hero.title"
                 style="font-size: 64px; font-weight: 600; margin: 30px 0 30px 0; line-height: 1.1;">
                 为智能餐饮而生
@@ -1338,12 +1336,11 @@
                     <picture>
                         <source srcset="assets/logo/panshaker-logo.svg" type="image/svg+xml">
                         <img src="assets/logo/panshaker-logo.png"
-                             srcset="assets/logo/panshaker-logo.png 1x, assets/logo/panshaker-logo@2x.png 2x"
-                             alt="Panshaker Services"
-                             style="height: 20px; width: auto; filter: brightness(0) invert(1);">
+                            srcset="assets/logo/panshaker-logo.png 1x, assets/logo/panshaker-logo@2x.png 2x"
+                            alt="Panshaker Services"
+                            style="height: 20px; width: auto; filter: brightness(0) invert(1);">
                     </picture>
-                    <sup
-                        style="font-size: 10px; margin-left: 2px; color: #a1a1a6; font-weight: 400;">™</sup>
+                    <sup style="font-size: 10px; margin-left: 2px; color: #a1a1a6; font-weight: 400;">™</sup>
                 </div>
                 <p data-i18n="synapse.hero.build" style="font-size: 18px; font-weight: 400; color: #a1a1a6; margin: 0;">
                     打造</p>
@@ -1985,8 +1982,7 @@
             <!-- Copyright -->
             <div style="border-top: 1px solid #d2d2d7; padding-top: 20px; text-align: center;">
                 <p style="font-size: 12px; color: #86868b;">
-                    <span
-                        style="font-size: 14px; vertical-align: baseline;">©</span>
+                    <span style="font-size: 14px; vertical-align: baseline;">©</span>
                     <span data-i18n="synapse.footer.copyright">2026 PanOS. All rights reserved.</span>
                 </p>
                 <p style="font-size: 12px; color: #86868b; margin-top: 10px;">
