--- a/index.html
+++ b/index.html
@@ -570,9 +570,8 @@
                 <picture>
                     <source srcset="assets/logo/panshaker-logo.svg" type="image/svg+xml">
                     <img src="assets/logo/panshaker-logo.png"
-                         srcset="assets/logo/panshaker-logo.png 1x, assets/logo/panshaker-logo@2x.png 2x"
-                         alt="Panshaker Services"
-                         class="logo-img">
+                        srcset="assets/logo/panshaker-logo.png 1x, assets/logo/panshaker-logo@2x.png 2x"
+                        alt="Panshaker Services" class="logo-img">
                 </picture>
             </a>
             <nav class="nav-links">
@@ -776,7 +775,8 @@
                             PanOS
                         </h3>
                     </a>
-                    <p data-i18n-html="home.solution.synapse_desc" style="font-size: 22px; color: #333; font-weight: 500; line-height: 1.6;">
+                    <p data-i18n-html="home.solution.synapse_desc"
+                        style="font-size: 22px; color: #333; font-weight: 500; line-height: 1.6;">
                         下一代餐饮操作系统<br>打造中餐出海标准化一条龙服务</p>
                     <a href="synapse_os.html" data-i18n="home.solution.learn_more"
                         style="display: inline-block; margin-top: 25px; padding: 12px 28px; background: #0E427E; color: #fff; border-radius: 25px; font-size: 15px; transition: all 0.3s; box-shadow: 0 4px 12px rgba(14, 66, 126, 0.2);"
@@ -854,6 +854,18 @@
         </div>
     </section>
 
+    <!-- 品牌关系 -->
+    <section class="section" style="background: #fafafa; padding: 40px 0;">
+        <div class="container" style="text-align: center;">
+            <p style="font-size: 14px; color: #999; margin-bottom: 24px;" data-i18n="about.brand.desc">Panshaker
+                Services 是芯厨师的海外品牌</p>
+            <div style="display: flex; align-items: center; justify-content: center; gap: 40px; flex-wrap: wrap;">
+                <img src="assets/logo/panshaker-logo.svg" alt="Panshaker Services" style="height: 24px; width: auto;">
+                <img src="assets/logo/xinchushi-logo.svg" alt="芯厨师 xinchushi" style="height: 32px; width: auto;">
+            </div>
+        </div>
+    </section>
+
     <footer>
         <div class="container">
             <div class="footer-content">
@@ -882,9 +894,8 @@
                 </div>
             </div>
             <div class="copyright">
-                <span
-                    style="font-size: 14px; vertical-align: baseline;">©</span><span
-                    data-i18n="footer.copyright">2026 Panshaker Inc.
+                <span style="font-size: 14px; vertical-align: baseline;">©</span><span data-i18n="footer.copyright">2026
+                    Panshaker Inc.
                     All Rights Reserved.</span> <br>
                 <span data-i18n="footer.tagline">聚焦北美市场的餐饮自动化基础设施服务商</span>
             </div>
