--- a/synapse_os.html
+++ b/synapse_os.html
@@ -61,6 +61,78 @@
             font-display: swap;
         }
 
+        /* SF Pro Display — Korean interface headings */
+        @font-face {
+            font-family: 'SF Pro Display';
+            src: url('assets/fonts/SF-Pro-Display-Regular.otf') format('opentype');
+            font-weight: 400;
+            font-style: normal;
+            font-display: swap;
+        }
+
+        @font-face {
+            font-family: 'SF Pro Display';
+            src: url('assets/fonts/SF-Pro-Display-Medium.otf') format('opentype');
+            font-weight: 500;
+            font-style: normal;
+            font-display: swap;
+        }
+
+        @font-face {
+            font-family: 'SF Pro Display';
+            src: url('assets/fonts/SF-Pro-Display-Semibold.otf') format('opentype');
+            font-weight: 600;
+            font-style: normal;
+            font-display: swap;
+        }
+
+        @font-face {
+            font-family: 'SF Pro Display';
+            src: url('assets/fonts/SF-Pro-Display-Bold.otf') format('opentype');
+            font-weight: 700;
+            font-style: normal;
+            font-display: swap;
+        }
+
+        /* SF Pro Text — Korean interface body text */
+        @font-face {
+            font-family: 'SF Pro Text';
+            src: url('assets/fonts/SF-Pro-Text-Regular.otf') format('opentype');
+            font-weight: 400;
+            font-style: normal;
+            font-display: swap;
+        }
+
+        @font-face {
+            font-family: 'SF Pro Text';
+            src: url('assets/fonts/SF-Pro-Text-Medium.otf') format('opentype');
+            font-weight: 500;
+            font-style: normal;
+            font-display: swap;
+        }
+
+        @font-face {
+            font-family: 'SF Pro Text';
+            src: url('assets/fonts/SF-Pro-Text-Semibold.otf') format('opentype');
+            font-weight: 600;
+            font-style: normal;
+            font-display: swap;
+        }
+
+        @font-face {
+            font-family: 'SF Pro Text';
+            src: url('assets/fonts/SF-Pro-Text-Bold.otf') format('opentype');
+            font-weight: 700;
+            font-style: normal;
+            font-display: swap;
+        }
+
+        /* Korean language — SF Pro override */
+        html[lang="ko"] body {
+            font-family: 'SF Pro Display', 'SF Pro Text', -apple-system, BlinkMacSystemFont, "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", sans-serif;
+            word-break: keep-all;
+        }
+
         /* Base Reset & Vars */
         :root {
             --brand-blue: #0E427E;
@@ -341,7 +413,6 @@
         }
 
         .tier-gold h2 {
-            font-family: 'Smartisan Compact', sans-serif;
             font-size: 44px;
             color: var(--gold);
             margin: 0 0 16px 0;
