--- a/synapse_os.html
+++ b/synapse_os.html
@@ -218,9 +218,10 @@
         }
 
         .nav-links a {
-            margin-left: 30px;
+            margin-left: 40px;
             font-size: 14px;
             color: #666;
+            font-weight: 500;
             transition: color 0.3s;
         }
 
