--- a/about.html
+++ b/about.html
@@ -12,6 +12,16 @@
     <link rel="icon" type="image/png" href="assets/images/favicon-16x16.png" sizes="16x16">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
     <link rel="icon" href="favicon.ico" sizes="any">
+    <!-- SEO: Canonical -->
+    <link rel="canonical" href="https://www.panshaker.com/about.html">
+    <!-- SEO: Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="About Us | Panshaker Services — Innovation Meets Automation">
+    <meta property="og:description"
+        content="Learn about Panshaker Services — a leader in North American food automation, combining industrial-grade hardware with AI-powered systems to revolutionize the restaurant industry.">
+    <meta property="og:url" content="https://www.panshaker.com/about.html">
+    <meta property="og:site_name" content="Panshaker Services">
+    <meta property="og:image" content="https://www.panshaker.com/assets/logo/panshaker-logo.png">
     <link rel="stylesheet" href="assets/styles/shared.css?v=3">
     <style>
         /* 全局样式 - 补充页面自定义 */
@@ -264,9 +274,8 @@
                 <picture>
                     <source srcset="assets/logo/panshaker-logo.svg" type="image/svg+xml">
                     <img src="assets/logo/panshaker-logo.png"
-                         srcset="assets/logo/panshaker-logo.png 1x, assets/logo/panshaker-logo@2x.png 2x"
-                         alt="Panshaker Services"
-                         class="logo-img">
+                        srcset="assets/logo/panshaker-logo.png 1x, assets/logo/panshaker-logo@2x.png 2x"
+                        alt="Panshaker Services" class="logo-img">
                 </picture>
             </a>
             <nav class="nav-links">
@@ -274,6 +283,7 @@
                 <a href="x7_ai.html" data-i18n="nav.x7_ai">Panshaker X7</a>
                 <a href="synapse_os.html" data-i18n="nav.synapse">PanOS</a>
                 <a href="about.html" class="active" data-i18n="nav.about">关于我们</a>
+                <a href="https://www.xinchushi.com/service" data-i18n="nav.service">服务</a>
                 <a href="#" data-i18n="nav.contact">联系我们</a>
             </nav>
         </div>
@@ -345,8 +355,8 @@
     <!-- 品牌关系 -->
     <section class="section" style="background: #fafafa; padding: 40px 0;">
         <div class="container" style="text-align: center;">
-            <p style="font-size: 14px; color: #999; margin-bottom: 24px;"
-               data-i18n="about.brand.desc">Panshaker Services 是芯厨师的海外品牌</p>
+            <p style="font-size: 14px; color: #999; margin-bottom: 24px;" data-i18n="about.brand.desc">Panshaker
+                Services 是芯厨师的海外品牌</p>
             <div style="display: flex; align-items: center; justify-content: center; gap: 40px; flex-wrap: wrap;">
                 <img src="assets/logo/panshaker-logo.svg" alt="Panshaker Services" style="height: 24px; width: auto;">
                 <img src="assets/logo/xinchushi-logo.svg" alt="芯厨师 xinchushi" style="height: 32px; width: auto;">
@@ -382,9 +392,8 @@
                 </div>
             </div>
             <div class="copyright">
-                <span
-                    style="font-size: 14px; vertical-align: baseline;">©</span><span
-                    data-i18n="footer.copyright">2026 Panshaker Inc.
+                <span style="font-size: 14px; vertical-align: baseline;">©</span><span data-i18n="footer.copyright">2026
+                    Panshaker Inc.
                     All Rights Reserved.</span> <br>
                 <span data-i18n="footer.tagline">聚焦北美市场的餐饮自动化基础设施服务商</span>
             </div>
