--- a/index.html
+++ b/index.html
@@ -12,6 +12,60 @@
     <link rel="icon" type="image/png" href="assets/images/favicon-16x16.png" sizes="16x16">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
     <link rel="icon" href="favicon.ico" sizes="any">
+    <!-- SEO: Canonical -->
+    <link rel="canonical" href="https://www.panshaker.com/">
+    <!-- SEO: Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Panshaker Services — AI-Powered Food Automation Solutions">
+    <meta property="og:description"
+        content="Panshaker Services delivers AI-powered automated cooking solutions for North American restaurants. Low-cost hardware automation meets intelligent restaurant management.">
+    <meta property="og:url" content="https://www.panshaker.com/">
+    <meta property="og:site_name" content="Panshaker Services">
+    <meta property="og:image" content="https://www.panshaker.com/assets/logo/panshaker-logo.png">
+    <meta property="og:locale" content="zh_CN">
+    <meta property="og:locale:alternate" content="en_US">
+    <meta property="og:locale:alternate" content="ko_KR">
+    <meta property="og:locale:alternate" content="ja_JP">
+    <!-- SEO: Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Panshaker Services — AI-Powered Food Automation Solutions">
+    <meta name="twitter:description" content="AI-powered automated cooking solutions for North American restaurants.">
+    <meta name="twitter:image" content="https://www.panshaker.com/assets/logo/panshaker-logo.png">
+    <!-- SEO: JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "Organization",
+          "name": "Panshaker Services",
+          "alternateName": "芯厨师",
+          "url": "https://www.panshaker.com",
+          "logo": "https://www.panshaker.com/assets/logo/panshaker-logo.png",
+          "description": "AI-powered automated cooking solutions for North American restaurants.",
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "email": "contact@panshaker.com",
+            "contactType": "customer service"
+          },
+          "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "San Diego",
+            "addressRegion": "CA",
+            "addressCountry": "US"
+          },
+          "sameAs": [
+            "https://www.xinchushi.com"
+          ]
+        },
+        {
+          "@type": "WebSite",
+          "name": "Panshaker Services",
+          "url": "https://www.panshaker.com"
+        }
+      ]
+    }
+    </script>
     <link rel="stylesheet" href="assets/styles/shared.css?v=3">
     <style>
         /* 布局容器 */
@@ -579,6 +633,7 @@
                 <a href="x7_ai.html" data-i18n="nav.x7_ai">Panshaker X7</a>
                 <a href="synapse_os.html" data-i18n="nav.synapse">PanOS</a>
                 <a href="about.html" data-i18n="nav.about">关于我们</a>
+                <a href="https://www.xinchushi.com/service" data-i18n="nav.service">服务</a>
                 <a href="#" data-i18n="nav.contact">联系我们</a>
             </nav>
         </div>
@@ -726,7 +781,7 @@
             <h1 data-i18n-html="home.hero.title">AI 赋能下低人工成本<br><strong>商业中餐解决方案</strong></h1>
             <p data-i18n="home.hero.subtitle" style="max-width: 800px; margin: 30px auto 40px; opacity: 0.9;">融合硬件自动化与
                 AI 智能系统，重新定义餐饮行业效率</p>
-            <a href="#" data-i18n="home.hero.cta"
+            <a href="https://www.xinchushi.com/service" data-i18n="home.hero.cta"
                 style="display:inline-block; padding: 16px 48px; background:#62BA46; color:#fff; border-radius:30px; font-size:17px; pointer-events: auto; font-weight: 500; box-shadow: 0 8px 24px rgba(98, 186, 70, 0.3); transition: all 0.4s;"
                 onmouseenter="this.style.background='#0E427E'; this.style.transform='translateY(-3px)'; this.style.boxShadow='0 12px 32px rgba(14, 66, 126, 0.4)'"
                 onmouseleave="this.style.background='#62BA46'; this.style.transform='translateY(0)'; this.style.boxShadow='0 8px 24px rgba(98, 186, 70, 0.3)'">
