--- a/profile_unknown.html
+++ b/profile_unknown.html
@@ -6,10 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover">
     <meta name="format-detection" content="telephone=no">
     <title>unknown | 管理团队 | Panshaker Services</title>
+    <meta name="description"
+        content="CTO of Panshaker Services. PhD in Computer Science from University of Pennsylvania.">
     <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="assets/images/favicon-16x16.png" sizes="16x16">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
     <link rel="icon" href="favicon.ico" sizes="any">
+    <!-- SEO: Canonical -->
+    <link rel="canonical" href="https://www.panshaker.com/profile_unknown.html">
+    <!-- SEO: Open Graph -->
+    <meta property="og:type" content="profile">
+    <meta property="og:title" content="CTO | Panshaker Services">
+    <meta property="og:description"
+        content="CTO of Panshaker Services. PhD in Computer Science from University of Pennsylvania.">
+    <meta property="og:url" content="https://www.panshaker.com/profile_unknown.html">
+    <meta property="og:site_name" content="Panshaker Services">
+    <meta property="og:image" content="https://www.panshaker.com/assets/logo/panshaker-logo.png">
     <link rel="stylesheet" href="assets/styles/shared.css?v=3">
     <!-- Same styles as others -->
     <style>
@@ -175,9 +187,8 @@
                 <picture>
                     <source srcset="assets/logo/panshaker-logo.svg" type="image/svg+xml">
                     <img src="assets/logo/panshaker-logo.png"
-                         srcset="assets/logo/panshaker-logo.png 1x, assets/logo/panshaker-logo@2x.png 2x"
-                         alt="Panshaker Services"
-                         class="logo-img">
+                        srcset="assets/logo/panshaker-logo.png 1x, assets/logo/panshaker-logo@2x.png 2x"
+                        alt="Panshaker Services" class="logo-img">
                 </picture>
             </a>
             <nav class="nav-links">
@@ -185,6 +196,7 @@
                 <a href="x7_ai.html" data-i18n="nav.x7_ai">Panshaker X7</a>
                 <a href="synapse_os.html" data-i18n="nav.synapse">PanOS</a>
                 <a href="about.html" data-i18n="nav.about">关于我们</a>
+                <a href="https://www.xinchushi.com/service" data-i18n="nav.service">服务</a>
                 <a href="#" data-i18n="nav.contact">联系我们</a>
             </nav>
         </div>
@@ -232,9 +244,8 @@
                 </div>
             </div>
             <div class="copyright">
-                <span
-                    style="font-size: 14px; vertical-align: baseline;">©</span><span
-                    data-i18n="footer.copyright">2026 Panshaker Inc.
+                <span style="font-size: 14px; vertical-align: baseline;">©</span><span data-i18n="footer.copyright">2026
+                    Panshaker Inc.
                     All Rights Reserved.</span> <br>
                 <span data-i18n="footer.tagline">聚焦北美市场的餐饮自动化基础设施服务商</span>
             </div>
