--- a/synapse_os.html
+++ b/synapse_os.html
@@ -11,6 +11,16 @@
     <link rel="icon" type="image/png" href="assets/images/favicon-16x16.png" sizes="16x16">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
     <link rel="icon" href="favicon.ico" sizes="any">
+    <!-- SEO: Canonical -->
+    <link rel="canonical" href="https://www.panshaker.com/synapse_os.html">
+    <!-- SEO: Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="PanOS | Panshaker Services — Next-Gen Restaurant Operating System">
+    <meta property="og:description"
+        content="PanOS — the next-generation restaurant operating system by Panshaker Services. AI-powered management, real-time monitoring, and automated kitchen control.">
+    <meta property="og:url" content="https://www.panshaker.com/synapse_os.html">
+    <meta property="og:site_name" content="Panshaker Services">
+    <meta property="og:image" content="https://www.panshaker.com/assets/logo/panos-logo.png">
     <!-- Fonts -->
     <style>
         @font-face {
