--- a/x7_ai.html
+++ b/x7_ai.html
@@ -12,6 +12,16 @@
     <link rel="icon" type="image/png" href="assets/images/favicon-16x16.png" sizes="16x16">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
     <link rel="icon" href="favicon.ico" sizes="any">
+    <!-- SEO: Canonical -->
+    <link rel="canonical" href="https://www.panshaker.com/x7_ai.html">
+    <!-- SEO: Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="X7-AI Robot | Panshaker Services — Intelligent Cooking Automation">
+    <meta property="og:description"
+        content="Explore the X7-AI Robot by Panshaker Services — intelligent cooking automation powered by AI.">
+    <meta property="og:url" content="https://www.panshaker.com/x7_ai.html">
+    <meta property="og:site_name" content="Panshaker Services">
+    <meta property="og:image" content="https://www.panshaker.com/assets/logo/panshaker-logo.png">
     <link rel="stylesheet" href="assets/styles/shared.css?v=3">
     <style>
         body {
@@ -53,9 +63,8 @@
                 <picture>
                     <source srcset="assets/logo/panshaker-logo.svg" type="image/svg+xml">
                     <img src="assets/logo/panshaker-logo.png"
-                         srcset="assets/logo/panshaker-logo.png 1x, assets/logo/panshaker-logo@2x.png 2x"
-                         alt="Panshaker Services"
-                         class="logo-img">
+                        srcset="assets/logo/panshaker-logo.png 1x, assets/logo/panshaker-logo@2x.png 2x"
+                        alt="Panshaker Services" class="logo-img">
                 </picture>
             </a>
             <nav class="nav-links">
@@ -63,17 +72,14 @@
                 <a href="x7_ai.html" class="active" data-i18n="nav.x7_ai">Panshaker X7</a>
                 <a href="synapse_os.html" data-i18n="nav.synapse">PanOS</a>
                 <a href="about.html" data-i18n="nav.about">关于我们</a>
+                <a href="https://www.xinchushi.com/service" data-i18n="nav.service">服务</a>
                 <a href="#" data-i18n="nav.contact">联系我们</a>
             </nav>
         </div>
     </header>
 
     <div class="iframe-wrapper">
-        <iframe
-            src="https://www.xinchushi.com/product"
-            title="X7-AI Robot Product"
-            allowfullscreen
-            loading="lazy">
+        <iframe src="https://www.xinchushi.com/product" title="X7-AI Robot Product" allowfullscreen loading="lazy">
         </iframe>
     </div>
 
@@ -105,9 +111,8 @@
                 </div>
             </div>
             <div class="copyright">
-                <span
-                    style="font-size: 14px; vertical-align: baseline;">©</span><span
-                    data-i18n="footer.copyright">2026 Panshaker Inc.
+                <span style="font-size: 14px; vertical-align: baseline;">©</span><span data-i18n="footer.copyright">2026
+                    Panshaker Inc.
                     All Rights Reserved.</span> <br>
                 <span data-i18n="footer.tagline">聚焦北美市场的餐饮自动化基础设施服务商</span>
             </div>
